# test-tap-xactly

tap-xactly/: .gitignore  README.md  pull_request_template.md  pylintrc  pyproject.toml
tap-xactly/tap_xactly/: __init__.py  client.py  discovery.py  streams.py  sync.py  utils.py
tap-xactly/tap_xactly/schemas/: xc_attainment_measure.json  xc_attainment_measure_criteria.json  xc_credit.json  xc_credit_adjustment.json  xc_credit_held.json  xc_credit_summary.json  xc_credit_totals.json  xc_credit_type.json  xc_pos_hierarchy.json  xc_pos_hierarchy_hist.json  xc_pos_hierarchy_type.json  xc_pos_hierarchy_type_hist.json  xc_pos_part_assignment.json  xc_pos_part_assignment_hist.json  xc_pos_rel_type.json  xc_pos_rel_type_hist.json  xc_pos_relations.json  xc_pos_relations_hist.json  xc_pos_title_assignment.json  xc_pos_title_assignment_hist.json  xc_position.json  xc_position_hist.json  xc_quota.json  xc_quota_assignment.json  xc_quota_assignment_hist.json  xc_quota_hist.json  xc_quota_relationship.json  xc_quota_summary.json  xc_quota_totals.json  xc_role.json
tap-xactly/tests/: client_test.py  conftest.py  streams_test.py  sync_test.py
